--- a/Latex/references.bib
+++ b/Latex/references.bib
@@ -144,3 +144,11 @@ doi = {10.48550/arXiv.1712.00303}
       primaryClass={astro-ph.EP},
       url={https://arxiv.org/abs/2311.12445}, 
 }
+
+@BOOK{1979rpa..book.....R,
+       author = {{Rybicki}, George B. and {Lightman}, Alan P.},
+        title = "{Radiative processes in astrophysics}",
+         year = 1979,
+       adsurl = {https://ui.adsabs.harvard.edu/abs/1979rpa..book.....R},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
